# home-broker-rust

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: rust.yml
src/: lib.rs  main.rs  tui.rs
src/core/: errors.rs  mod.rs  orderbook.rs  rwlock.rs  threadpool.rs
src/models/: mod.rs  order.rs  side.rs  trade.rs
src/sync/: mod.rs  mpsc.rs  rwlock.rs  threadpool.rs
src/tests/: mod.rs
src/ui/: mod.rs  tui.rs
src/utils/: mod.rs  random.rs
