[package]
name = "broker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
crossbeam = "0.8"
uuid = { version = "1.7", features = ["v4"] }
thiserror = "1.0"
ratatui = { version = "0.26.0", features = ["all-widgets"] }
crossterm = "0.27"
rand = "0.8"
